<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_ritec_configuration">

        <ListPreference
            android:defaultValue="1024"
            android:entries="@array/pref_ritec_channels_titles"
            android:entryValues="@array/pref_ritec_channels_values"
            android:key="pref_key_ritec_channels"
            android:title="@string/pref_title_ritec_channels" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="pref_key_ritec_lld"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ritec_lld" />

        <EditTextPreference
            android:defaultValue="1023"
            android:key="pref_key_ritec_uld"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ritec_uld" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="pref_key_ritec_high_voltage"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ritec_high_voltage" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_ritec_hv_inhibit_titles"
            android:entryValues="@array/pref_ritec_hv_inhibit_values"
            android:key="pref_key_ritec__hv_inhibit"
            android:title="@string/pref_title_ritec_hv_inhibit" />

        <EditTextPreference
            android:defaultValue="1.622"
            android:key="pref_key_ritec_energy_per_channel_a"
            android:numeric="decimal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ritec_energy_per_channel_a" />

        <EditTextPreference
            android:defaultValue="2.991"
            android:key="pref_key_ritec_energy_per_channel_b"
            android:numeric="decimal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ritec_energy_per_channel_b" />

    </PreferenceCategory>
</PreferenceScreen>